[package]
name = "lsspace"
version = "0.2.0"
authors = ["Aniko33"]
license = "GNU General Public License v3.0"
repository = "https://github.com/aniko33/ls-space-rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
fs2 = "0.4.3"
